# incode

./: .env.example  .gitignore  .mcp.json  Dockerfile  ESPECIFICACAO_PROJETO.md  README.md  docker-compose.yml  pyproject.toml  spec.txt
docker/: init.sql
examples/: mcp-config.json  opencode-mcp-config.json  opencode.json
examples/sample-workspace/projeto-a/: app.py
scripts/: e2e.sh  test_mcp_client.py
src/repo_code_indexer/: cli.py  config.py  index_flow.py  mcp_server.py  projects.py  search.py  service.py
src/repo_code_indexer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
