[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "incode"
version = "0.1.0"
description = "Indexador semantico de codigo com CLI e MCP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastmcp>=2.0.0",
  "boto3>=1.42.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "python-dotenv>=1.0.1",
]

[project.scripts]
incode = "repo_code_indexer.cli:app"
incode-mcp = "repo_code_indexer.mcp_server:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

